[package]
name = "deer-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ex04"
path = "src/ex04.rs"

[[bin]]
name = "ex05"
path = "src/ex05.rs"

[[bin]]
name = "abc162_b"
path = "src/abc162_b.rs"

[[bin]]
name = "abc206_b"
path = "src/abc206_b.rs"

[[bin]]
name = "abc165_b"
path = "src/abc165_b.rs"

[[bin]]
name = "abc200_b"
path = "src/abc200_b.rs"

[[bin]]
name = "ex06"
path = "src/ex06.rs"

[dependencies]
proconio = "0.4.3"
